--- a/style.css
+++ b/style.css
@@ -1,20 +1,53 @@
+body {
+    background-color: #002c49; 
+    border-style: solid;
+    border-color: white;
+    width: 700px;
+    margin: 0 auto;
+}
+
 .h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: #00294c;
     color: white;
     font-size: 20px;
     font-weight: 300;
+    display: block;
+    text-align: center;
 }
 
-#list {
-    background-color: dimgray;
-    list-style: circle;
-    font-family: Calibri, sans-serif;
-    font-size: 12px;
-    color: white;
+#img {
+    height: auto;
+    width: 400px;
+}
 
+#list ul {
+    display: inline-block;
+    background-color: dimgray;
+    list-style-type: none;
+    font-family: Calibri, sans-serif;
+    font-size: 16px;
+    color: white;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
+
+#list li {
+    display: inline-block;
+    margin: 5px;
+    text-align: center;
+    width: 300px;
+    border-color: white;
+    border-style: solid;
+}
+
+
+a:link {
+    color: white;
 }
 
 a:visited {
     color: lightblue
 }
+
+
